# unrot

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: fuzzy.rs  lib.rs  scanner.rs
core/src/resolver/: action.rs  confirm.rs  fs_ops.rs  mod.rs  model.rs
