[workspace]
members = ["core", "cli"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
repository = "https://github.com/cachebag/unrot"
homepage = "https://github.com/cachebag/unrot"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
overflow-checks = false

[profile.bench]
debug = true
strip = "none"
