[package]
name = "unrot_core"
version = "0.1.0"
description = "Core library for unrot — find and repair broken symlinks with fuzzy matching"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unrot_core"
keywords = ["symlink", "broken-symlink", "fuzzy-matching", "filesystem"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3"
